bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q8 (Optimized, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(title) AS title, ENC_PT(text) AS text, ENC_PT(reviewDate) AS reviewDate, ENC_PT(reviewer) AS reviewer, ENC_PT(reviewerName) AS reviewerName, ENC_PT(rating1) AS rating1, ENC_PT(rating2) AS rating2, ENC_PT(rating3) AS rating3, ENC_PT(rating4) AS rating4
  Sort: AS_SORTABLE_BYTES(ENC_TF(ENC_PT(reviewDate))) DESC NULLS FIRST, fetch=20
    Projection: lhs.title AS title, lhs.text AS text, lhs.reviewDate AS reviewDate, lhs.reviewer AS reviewer, lhs.reviewerName AS reviewerName, lhs.rating1 AS rating1, lhs.rating2 AS rating2, lhs.rating3 AS rating3, rhs.rating4 AS rating4
      Left Join: lhs.review = rhs.review
        SubqueryAlias: lhs
          Projection: lhs.review AS review, lhs.title AS title, lhs.text AS text, lhs.reviewDate AS reviewDate, lhs.reviewer AS reviewer, lhs.reviewerName AS reviewerName, lhs.rating1 AS rating1, lhs.rating2 AS rating2, rhs.rating3 AS rating3
            Left Join: lhs.review = rhs.review
              SubqueryAlias: lhs
                Projection: lhs.review AS review, lhs.title AS title, lhs.text AS text, lhs.reviewDate AS reviewDate, lhs.reviewer AS reviewer, lhs.reviewerName AS reviewerName, lhs.rating1 AS rating1, rhs.rating2 AS rating2
                  Left Join: lhs.review = rhs.review
                    SubqueryAlias: lhs
                      Projection: lhs.review AS review, lhs.title AS title, lhs.text AS text, lhs.reviewDate AS reviewDate, lhs.reviewer AS reviewer, lhs.reviewerName AS reviewerName, rhs.rating1 AS rating1
                        Left Join: lhs.review = rhs.review
                          SubqueryAlias: lhs
                            BasicGraphPattern: filters=[EBV(LANGMATCHES(ENC_TF(LANG(ENC_PT(text))), Union 2:{value:EN,language:}))]
                              QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578>]
                              QuadPattern: triple_pattern=[?review <http://purl.org/dc/elements/1.1/title> ?title]
                              QuadPattern: triple_pattern=[?review <http://purl.org/stuff/rev#text> ?text]
                              QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate> ?reviewDate]
                              QuadPattern: triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer]
                              QuadPattern: triple_pattern=[?reviewer <http://xmlns.com/foaf/0.1/name> ?reviewerName]
                          SubqueryAlias: rhs
                            QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1]
                    SubqueryAlias: rhs
                      QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2]
              SubqueryAlias: rhs
                QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?rating3]
        SubqueryAlias: rhs
          QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?rating4]
