bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q9 (Execution Plan, Plain Term).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(x@0, x@0)], projection=[x@0, x__type@2]
  DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review4194> <http://purl.org/stuff/rev#reviewer> ?x], blank_node_mode=Variable
  FilterExec: DynamicFilter [ x@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer207,data_type:,language_tag:} AND x@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer207,data_type:,language_tag:} AND x@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer207,data_type:,language_tag:}]) ]
    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?x <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ?x__type], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ x@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer207,data_type:,language_tag:} AND x@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer207,data_type:,language_tag:} AND x@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer207,data_type:,language_tag:}]) ]]
