bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q9 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(x@0) as x, ENC_PT(x__type@1) as x__type]
  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(x@0, x@0)], projection=[x@0, x__type@2]
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review4194> <http://purl.org/stuff/rev#reviewer> ?x], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..18106970]]}, projection=[object@3 as x], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review4194> AND predicate@2 = <http://purl.org/stuff/rev#reviewer>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review4194> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review4194> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://purl.org/stuff/rev#reviewer> AND <http://purl.org/stuff/rev#reviewer> <= predicate_max@6, required_guarantees=[predicate in (<http://purl.org/stuff/rev#reviewer>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review4194>)]
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?x <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ?x__type], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as x, object@3 as x__type], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2, required_guarantees=[predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
