bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q9 (Optimized, PlainTerm).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: lhs.x AS x, rhs.x__type AS x__type
  Inner Join: lhs.x = rhs.x
    SubqueryAlias: lhs
      QuadPattern: triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review4194> <http://purl.org/stuff/rev#reviewer> ?x]
    SubqueryAlias: rhs
      QuadPattern: triple_pattern=[?x <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ?x__type]
